# readln

./: .gitignore  CMakeLists.txt  README.md
src/: input.c  input.h  main.c
